Fix home icon align

--- a/js/src/styles/navbar.scss
+++ b/js/src/styles/navbar.scss
@@ -37,6 +37,7 @@
         margin-left: 1rem;
 
         i.material-icons {
+            margin-top: 8px;
             font-size: 22px;
         }
 
